--- a/home.html
+++ b/home.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Pavilhão 9 - Gaviões da Fiel</title>
-    <link rel="stylesheet" href="static/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -105,4 +105,5 @@
     <button onclick="window.location.href='/sair'"
         style="padding: 10px 20px; background: rgb(0, 0, 0); color: white; border: none; border-radius: 5px; cursor: pointer;">
         Sair
+
     </button>
