--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Login - Pavilhão 9</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="static/style.css">
 </head>
 <div id="spotify-player" style="display:none; margin-top:20px; text-align:center;">
     <iframe style="border-radius:12px"
@@ -40,3 +40,4 @@
 
 
 </html>
+
