--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Login - Pavilhão 9</title>
-    <link rel="stylesheet" href="static/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <div id="spotify-player" style="display:none; margin-top:20px; text-align:center;">
     <iframe style="border-radius:12px"
@@ -17,7 +17,7 @@
 <body>
     <div class="login-container">
 
-        <img src="static\image\SCCP_escudo-150px.png">
+        <img src="SCCP_escudo-150px.png">
         <h1>Pavilhão 9 - Gaviões da Fiel🦅</h1>
         <form onsubmit="return login()" class="login-form">
             <input type="email" id="email" placeholder="Gmail" required>
@@ -40,4 +40,5 @@
 
 
 </html>
+
 
