--- a/sair.html
+++ b/sair.html
@@ -28,7 +28,7 @@
 </head>
 
 <body>
-    <img src="static\image\alo.jpg" width="300%" height="152">
+    <img src="alo.jpg" width="300%" height="152">
 
     <h1>Obrigado pela visita! Vai Corinthians! </h1>
 </body>
@@ -39,5 +39,6 @@
         allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy">
     </iframe>
 </div>
+
 
 </html>
