--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <button type="submit" onclick="showPlayer()">Entrar</button>
         </form>
     </div>
-    <script src="static\script.js"></script>
+    <script src="style\script.js"></script>
 </body>
 <script>
     function showPlayer() {
@@ -40,5 +40,6 @@
 
 
 </html>
+
 
 
