--- a/home.html
+++ b/home.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
+      <button type="submit" onclick="showPlayer()">Entrar</button>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -107,3 +107,4 @@
         Sair
 
     </button>
+
