--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
             <input type="email" id="email" placeholder="Gmail" required>
             <input type="text" id="usuario" placeholder="Usuário" required>
             <input type="password" id="senha" placeholder="Senha" required>
-            <button type="submit" onclick="showPlayer()">Entrar</button>
+            <a href="home.html">
+                <button>Entrar</button>
+          </a>
         </form>
     </div>
     <script src="style\script.js"></script>
@@ -40,6 +42,7 @@
 
 
 </html>
+
 
 
 
