--- a/index.html
+++ b/index.html
@@ -23,9 +23,10 @@
             <input type="email" id="email" placeholder="Gmail" required>
             <input type="text" id="usuario" placeholder="Usuário" required>
             <input type="password" id="senha" placeholder="Senha" required>
-            <a href="home.html">
-                <button>Entrar</button>
-          </a>
+       <h1>Página Inicial</h1>
+  <button onclick="window.location.href='home.html'">Ir para Home</button>
+</body>
+</html>
         </form>
     </div>
     <script src="style\script.js"></script>
@@ -42,6 +43,7 @@
 
 
 </html>
+
 
 
 
