--- a/index.html
+++ b/index.html
@@ -23,10 +23,9 @@
             <input type="email" id="email" placeholder="Gmail" required>
             <input type="text" id="usuario" placeholder="Usuário" required>
             <input type="password" id="senha" placeholder="Senha" required>
-       <h1>Página Inicial</h1>
-  <button onclick="window.location.href='home.html'">Ir para Home</button>
-</body>
-</html>
+  <  a href="home.html">
+      <button>Ir para Home</button>
+    </a>
         </form>
     </div>
     <script src="style\script.js"></script>
@@ -43,6 +42,7 @@
 
 
 </html>
+
 
 
 
