--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
             <input type="email" id="email" placeholder="Gmail" required>
             <input type="text" id="usuario" placeholder="Usuário" required>
             <input type="password" id="senha" placeholder="Senha" required>
-  <  a href="home.html">
-      <button>Ir para Home</button>
+     <a href="home.html">
+      <button>Entrar</button>
     </a>
         </form>
     </div>
@@ -42,6 +42,7 @@
 
 
 </html>
+
 
 
 
