--- a/home.html
+++ b/home.html
@@ -6,6 +6,7 @@
     <title>Pavilhão 9 - Gaviões da Fiel</title>
     <link rel="stylesheet" href="style.css">
 </head>
+<button onclick="window.location.href='home.html'">Entrar</button>
 
 <body>
     <!-- Menu de navegação em abas -->
@@ -106,5 +107,6 @@
         Sair
 
     </button>
+
 
 
