--- a/home.html
+++ b/home.html
@@ -6,7 +6,7 @@
     <title>Pavilhão 9 - Gaviões da Fiel</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<button onclick="window.location.href='home.html'">Entrar</button>
+
 
 <body>
     <!-- Menu de navegação em abas -->
@@ -16,6 +16,9 @@
             <li><a href="#" onclick="openTab('jogos')">Jogos</a></li>
             <li><a href="#" onclick="openTab('musicas')">Músicas</a></li>
             <li><a href="#" onclick="openTab('sobre')">Sobre</a></li>
+                 <a href="home.html">
+      <button>Entrar</button>
+    </a>
         </ul>
     </nav>
 
@@ -107,6 +110,7 @@
         Sair
 
     </button>
+
 
 
 
