--- a/home.html
+++ b/home.html
@@ -16,9 +16,7 @@
             <li><a href="#" onclick="openTab('jogos')">Jogos</a></li>
             <li><a href="#" onclick="openTab('musicas')">Músicas</a></li>
             <li><a href="#" onclick="openTab('sobre')">Sobre</a></li>
-                 <a href="home.html">
-      <button>Entrar</button>
-    </a>
+             <li><a href="home.html"> <button>Entrar</button></a></li>  
         </ul>
     </nav>
 
@@ -110,6 +108,7 @@
         Sair
 
     </button>
+
 
 
 
