--- a/homi.html
+++ b/homi.html
@@ -16,7 +16,7 @@
             <li><a href="#" onclick="openTab('jogos')">Jogos</a></li>
             <li><a href="#" onclick="openTab('musicas')">Músicas</a></li>
             <li><a href="#" onclick="openTab('sobre')">Sobre</a></li>
-             <li><a href="home.html"> <button>Entrar</button></a></li>  
+             <li><a href="homi.html"> <button>Entrar</button></a></li>  
         </ul>
     </nav>
 
@@ -108,6 +108,7 @@
         Sair
 
     </button>
+
 
 
 
