--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <input type="email" id="email" placeholder="Gmail" required>
             <input type="text" id="usuario" placeholder="Usuário" required>
             <input type="password" id="senha" placeholder="Senha" required>
-     <a href="home.html">
+     <a href="homi.html">
       <button>Entrar</button>
     </a>
         </form>
@@ -43,6 +43,7 @@
 
 
 </html>
+
 
 
 
