--- a/index.html
+++ b/index.html
@@ -24,12 +24,10 @@
             <input type="email" id="email" placeholder="Gmail" required>
             <input type="text" id="usuario" placeholder="Usuário" required>
             <input type="password" id="senha" placeholder="Senha" required>
-     <a href="homi.html">
-      <button>Entrar</button>
-    </a>
+            <button onclick="window.location.href='homi.html'">Entrar</button>
         </form>
     </div>
-    <script src="style\script.js"></script>
+    <script src="script.js"></script>
 </body>
 <script>
     function showPlayer() {
@@ -43,6 +41,7 @@
 
 
 </html>
+
 
 
 
