--- a/homi.html
+++ b/homi.html
@@ -103,11 +103,12 @@
             Palavras-chave: Chacinas, Torcida Organizada Pavilhão 9; Letalidade Policial; Territórios.
         </p>
     </section>
-    <button onclick="window.location.href='/sair'"
+    <button onclick="window.location.href='sair.html'"
         style="padding: 10px 20px; background: rgb(0, 0, 0); color: white; border: none; border-radius: 5px; cursor: pointer;">
         Sair
 
     </button>
+
 
 
 
