--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <input type="email" id="email" placeholder="Gmail" required>
             <input type="text" id="usuario" placeholder="Usuário" required>
             <input type="password" id="senha" placeholder="Senha" required>
-            <button onclick="window.location.href='homi.html'">Entrar</button>
+            <button onclick="window.location.href='homi'">Entrar</button>
         </form>
     </div>
     <script src="script.js"></script>
@@ -41,6 +41,7 @@
 
 
 </html>
+
 
 
 
